# elite-craft

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config.py  main.py
src/elite_craft/: __init__.py  model_provider.py
src/elite_craft/agent/: base_agent.py  crafter_agent.py  state.py  states.py
src/elite_craft/database/: database.py  db_setup.sql
src/elite_craft/services/: __init__.py  chunking.py  crawling.py  database_uploading.py  embedding.py  pipeline.py  update_db_pipeline.py
src/elite_craft/tools/: code_reviewer.py  coder.py  retriever.py
